# base-google-test-project

./: CMakeLists.txt  README.md  unit_tests.cpp
src/main/: LightController.cpp  LightController.h
src/main/api/: Light.h  LightSwitch.h
src/test/: LightControllerTest.cpp  TestLight.cpp  TestLightSwitch.cpp
